recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:23: error: not found: value hexataKoch
    hexataKoch(levels-1,length*0.14)
    ^